<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/discussion" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/other" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/upload_course_material" />

        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/suggestion" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_priority_high_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/action_logout" />
    </group>

</menu>
